* mavenized * added site * changed encoding library to apache commons.